[package]
name = "fdbg"
version = "0.1.0"
edition = "2021"
description = "Fusion Native Debugger — machine-level debugger for Fusion-compiled x86-64 Windows PE executables"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fdbg"
path = "src/main.rs"

[dependencies]
# Windows API bindings (Win32 Debug API, process/thread/memory)
windows = { version = "0.58", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_Security",
] }

# PE/COFF binary parsing
goblin = "0.9"

# x86-64 disassembly
iced-x86 = "1.21"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# REPL with history
rustyline = "14"

# Error handling
thiserror = "1"
anyhow = "1"

# Hex formatting
hex = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"