[package]
name = "flux-resolve-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
petgraph = "0.6"
