[package]
name = "fuc"
version = "0.2.0"
edition = "2021"
authors = ["Fusion Team"]
description = "Fusion Compiler (fuc) - Rust-based compiler core"

[dependencies]
# Core dependencies from workspace
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
walkdir = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
libc = { workspace = true }
bincode = "1.3"
wasm-encoder = "0.219"
signal-hook = "0.3"

# Optional: LLVM backend (requires inkwell)
inkwell = { version = "0.9", optional = true, features = ["llvm20-1"] }

[features]
default = []
llvm = ["inkwell"]
wasm = []

[[bin]]
name = "fuc"
path = "src/main.rs"
required-features = ["wasm"]

[dev-dependencies]
wasmparser = "0.219"
wasmtime = "24.0"