[package]
name = "fuc2"
version = "2.0.0"
edition = "2021"
description = "Fusion Compiler v2 — Module preprocessor and build driver extending the bootstrap fuc.exe"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fuc2"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
notify = "6.1"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true