[package]
name = "fusion-monolith-core"
version = "3.4.1"
edition = "2021"
authors = ["Fusion Language Team"]
description = "The Monolithic Toolchain Core for Fusion & Rust - Unified Build, Audit, LSP, and Runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fusion-lang/fusion"
documentation = "https://fusion.dev/docs/monolith-core"
keywords = ["fusion", "toolchain", "build-system", "lsp", "security"]
categories = ["development-tools", "development-tools::build-utils", "compilers"]
readme = "README.md"

[features]
default = ["tui", "lsp", "security"]
cuda = ["cudarc"]
tui = []
lsp = []
security = []
full = ["cuda", "tui", "lsp", "security"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
parking_lot = "0.12"
dashmap = "6.0"
crossbeam-channel = "0.5"

# Async Runtime (minimal, we prefer std::thread)
# Note: Converted from tokio to std::thread + parking_lot for Fusion runtime compatibility

# TUI
crossterm = { version = "0.28", optional = false }
ratatui = { version = "0.29", optional = false }

# LSP Protocol
lsp-types = "0.97"
tower-lsp = { version = "0.20", optional = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Semver for version checking
semver = "1.0"

# CUDA (optional)
cudarc = { version = "0.12", optional = true }

# File watching
notify = "7.0"

# Time utilities
chrono = "0.4"

[dev-dependencies]
tempfile = "3.13"
criterion = "0.5"

[[bin]]
name = "fusion-monolith"
path = "src/main.rs"

[[bench]]
name = "orchestrator_bench"
harness = false
