[package]
name = "fusion-review-policy"
version = "1.0.0"
edition = "2021"
authors = ["Fusion Team"]
description = "Review policy enforcement for Fusion Coder"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
glob = "0.3"
