[package]
name = "fusion-review-policy"
version = "1.0.0"
edition = "2021"
authors = ["Fusion Team"]
description = "Review policy enforcement for Fusion Coder"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.133" }
anyhow = { version = "1.0.94" }
glob = { version = "0.3.1" }
fusion_std = { path = "/mnt/c/Projects/fusion_v0_1_all_features/registry/crates/std" }
