[package]
name = "fusion-settings"
version = "1.0.0"
edition = "2021"
authors = ["Fusion Team"]
description = "Hierarchical settings management for Fusion Coder"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
glob = "0.3"

# Fusion dependencies
fusion-review-policy = { path = "../fusion-review-policy" }
