[package]
name = "fusion-settings"
version = "1.0.0"
edition = "2021"
authors = ["Fusion Team"]
description = "Hierarchical settings management for Fusion Coder"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.133" }
toml = { version = "0.8.19" }
anyhow = { version = "1.0.94" }
dirs = { version = "5.0.1" }
glob = { version = "0.3.1" }
fusion-review-policy = { path = "../fusion-review-policy" }
fusion_std = { path = "registry/crates/std" }
