[package]
name = "fusionc"
version = "2.0.0"
edition = "2021"
description = "Fusion Polyglot Compiler Driver — DAG-based incremental build orchestrator"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5"