[package]
name = "fusion-github"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Fusion GitHub API integration"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
