[package]
name = "neuralmesh_vortex_pqc"
version = "2.0.1"
edition = "2021"
description = "Rust bindings for HyperCycle Vortex v2.0 Post-Quantum Cryptography Library"
license = "Apache-2.0"
links = "hypercycle_vortex"

[dependencies]
thiserror = "1.0"
hex = "0.4"

[build-dependencies]
cc = "1.0"

[features]
default = []
vendored = []
