[package]
name = "fusion-pkgmgr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Fusion package manager - Dependency resolution and PQC signing"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
pqcrypto = { workspace = true }
pqcrypto-mlkem = { workspace = true }
pqcrypto-mldsa = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
