[package]
name = "fusion-pkgmgr"
description = "Fusion package manager - Dependency resolution and PQC signing"
version = "0.2.0"
edition = "2021"
authors = ["Fusion Team"]
license = "MIT"

[dependencies]
anyhow = { version = "1.0.94" }
thiserror = { version = "2.0.6" }
serde = { version = "1.0.216", features = ["derive", "rc"] }
toml = { version = "0.8.19" }
reqwest = { version = "0.12.9", features = ["json", "stream", "multipart"] }
pqcrypto = { version = "0.17.0" }
pqcrypto-mlkem = { version = "0.1" }
pqcrypto-mldsa = { version = "0.1.0" }
sha3 = { version = "0.10.8" }
blake3 = { version = "1.5.0" }
fusion_std = { path = "../../registry/crates/std" }
