[package]
name = "fusion-policy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.133" }
anyhow = { version = "1.0.94" }
thiserror = { version = "2.0.6" }
tracing = { version = "0.1.41" }
fusion_std = { path = "/mnt/c/Projects/fusion_v0_1_all_features/registry/crates/std" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
