[package]
name = "tensor_weave"
version = "1.0.0"
edition = "2021"
authors = ["TensorWeave Engineering <eng@tensorweave.ai>"]

[[bin]]
name = "tensor_weave"
path = "src/main.rs"

[lib]
name = "tensor_weave"
path = "src/lib.rs"

[dependencies]
# Math & Parallelism
ndarray = { version = "0.15", features = ["serde", "rayon"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
ndarray-rand = "0.14"
rand = "0.8"
rayon = "1.7"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
uuid = { version = "1.4", features = ["v4", "serde"] }

# CLI & Utilities
clap = { version = "4.3", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"

# Observability (Production Requirement)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.21"
