[package]
name = "fusion-toolchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Fusion toolchain - Build, run, and compilation pipeline"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
which = { workspace = true }
fusion-core = { path = "../../registry/crates/fusion-core" }

[dev-dependencies]
proptest = { workspace = true }
