[package]
name = "fusion-toolchain"
description = "Fusion toolchain - Build, run, and compilation pipeline"
version = "0.2.0"
edition = "2021"
authors = ["Fusion Team"]
license = "MIT"

[dependencies]
anyhow = { version = "1.0.94" }
thiserror = { version = "2.0.6" }
serde = { version = "1.0.216", features = ["derive", "rc"] }
toml = { version = "0.8.19" }
which = { version = "6.0.3" }
fusion-core = { path = "/mnt/c/Projects/fusion_v0_1_all_features/registry/crates/fusion-core", package = "fusion-core" }
fusion_std = { path = "/mnt/c/Projects/fusion_v0_1_all_features/registry/crates/std" }
colored = { version = "2.0" }

[dev-dependencies]
proptest = { version = "1.6.0" }
