[package]
name = "fusion-vscode-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

# For VS Code extension protocol
jsonrpc-core = { workspace = true }
jsonrpc-derive = { workspace = true }
tower-lsp = { workspace = true }

# For extension execution - external crates
wasmer = "4.2"
wasmer-compiler-cranelift = "4.2"
wasmtime = "16.0"
reqwest = { workspace = true, features = ["stream"] }

# For Node.js bridge
boa_engine = { workspace = true }
zip = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

