[package]
name = "fusion-vscode-runtime"
version = "0.2.0"
edition = "2021"
authors = ["Fusion Team"]
license = "MIT"

[dependencies]
anyhow = { version = "1.0.94" }
thiserror = { version = "2.0.6" }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
async-trait = { version = "0.1.83" }
serde = { version = "1.0.216", features = ["derive", "rc"] }
serde_json = { version = "1.0.133" }
tracing = { version = "0.1.41" }
walkdir = { version = "2.5.0" }
fusion-policy = { path = "crates/policy", version = "0.1.0" }
dirs = { version = "5.0.1" }
jsonrpc-core = { version = "18.0.0" }
jsonrpc-derive = { version = "18.0.0" }
tower-lsp = { version = "0.20" }
reqwest = { version = "0.12.9", features = ["stream"] }
boa_engine = { version = "0.18.0", optional = true }
zip = { version = "0.6.6" }
parking_lot = { version = "0.12.3" }
fusion_std = { path = "registry/crates/std" }

[dev-dependencies]
tempfile = { version = "3.14.0" }

[features]
default = []
js = ["boa_engine"]
